Fixed centered text on text alignment on credits

--- a/themes/jaxplays/assets/ananke/css/_styles.css
+++ b/themes/jaxplays/assets/ananke/css/_styles.css
@@ -66,6 +66,10 @@ h1 a.jaxplayslogo {
 	margin-top: 0;
 }
 
+.credits .overflow-hidden.nowrap {
+	text-overflow: ellipsis;
+}
+
 @media screen and (min-width: 30em) {
 	.tickets {
 		min-width: 100px;
